fixed scheduling consumers in console